fix: ignore respimg until finding a good 404 image

--- a/src/404.md
+++ b/src/404.md
@@ -11,5 +11,5 @@ permalink: /404.html
 ---
 
 <div class="col-start-3 col-end-9">
-  {% respimg bgImg, title, 'w-full' %}
+  <!-- {% respimg bgImg, title, 'w-full' %} -->
 </div>
